# gadgets

./: README.md
client/: .gitignore  package.json
client/public/: index.html
client/src/: App.js  Receipt.js
server/: .flaskenv  pyproject.toml
server/server/: app.py
server/server/static/: index.html  precache-manifest.75891ec7e5309ba20fbc8f90ebe17d68.js  service-worker.js
server/server/static/static/js/: main.8e5cd96a.chunk.js  main.8e5cd96a.chunk.js.map
